product detail image wrap fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1328,6 +1328,10 @@ a.btn.ecom-product-go-to-checkout-btn {
 	background-color: transparent;
 }
 
+.widget.ecomproduct .ecom-product .ecom-product-preview-image-wrap {
+	background-position: -10000px;
+}
+
 .ecom-featuredproducts-header h2 {
 	padding-bottom: 25px;
 	padding-top: 15px;
